--- a/p-react/src/App.css
+++ b/p-react/src/App.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Slackey-Regular";
+  src: url("../public/fonts/Slackey-Regular.ttf");
+  font-weight: normal;
+  font-display: swap;
+}
